# k8s-manifests-legacy

./: .gitignore  .inflate.lock.yaml  .monokle  .pre-commit-config.yaml  README.md  inflate.py  pyproject.toml
bases.external/ceph-csi-cephfs/: namespace.yaml  values.ceph-csi-cephfs.yaml
bases.external/ceph-csi-rbd/: kustomization.yaml  namespace.yaml  values.ceph-csi-rbd.yaml
bases.external/crd/: kustomization.yaml
bases.external/istio/: namespace.yaml
bases.external/kiali/: kustomization.yaml  namespace.yaml  values.yaml
bases.external/kubernetes-dashboard/: kustomization.yaml
bases.external/nextcloud/: kustomization.yaml  namespace.yaml  values.nextcloud.yaml  values.postgresql.yaml  values.redis.yaml
bases.external/onlyoffice/: kustomization.yaml  values.rabbitmq.yaml  values.redis.yaml
bases.external/prometheus/: kustomization.yaml  values.stack.yaml
bases.external/sealed-secrets/: kustomization.yaml
bases.inflated/argo-cd/: build.yaml
bases.inflated/harbor/: build.yaml
bases.inflated/istio/: build.yaml
bases/argo-cd/: README.md
bases/ceph-csi-cephfs/: README.md
bases/ceph-csi-rbd/: README.md  build.yaml
bases/cert-manager/: README.md
cert-manager/: clusterissuer.yml  kustomization.yml  secret.json
cloudflared/: daemonset.yml  kustomization.yml  namespace.yml  secret.json
istio/: README.md  ingressclass.yml  kustomization.yml
kubernetes-dashboard/: kustomization.yml
metallb/: bgpadvertisement.yml  ipaddresspool.yml  kustomization.yml
rbac/: clusterrolebinding.yml  kustomization.yml
sealed-secrets/: kustomization.yml
(+105 files in other folders)
